--- a/Bank.Service.AccountHolder/appsettings.json
+++ b/Bank.Service.AccountHolder/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=AMAZE\\SQLEXPRESS;Database=AccountOwners;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
