--- a/Bank.Service.Account/appsettings.json
+++ b/Bank.Service.Account/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AccountHolderDb": "Server=AMAZE\\SQLEXPRESS;Database=AccountOwners;Trusted_Connection=True;TrustServerCertificate=True",
+    "AccountsDb": "Server=AMAZE\\SQLEXPRESS;Database=BankAccounts;Trusted_Connection=True;TrustServerCertificate=True"
+
+  }
+
 }
