--- a/Bank.Service.Transactions/appsettings.json
+++ b/Bank.Service.Transactions/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TransactionDb": "Server=AMAZE\\SQLEXPRESS;Database=BankTransactions;Trusted_Connection=True;TrustServerCertificate=True"
+
+  }
 }
