--- a/BankServices/appsettings.json
+++ b/BankServices/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "AccountAPI": "https://localhost:7022",
+    "AccountHolderAPI": "https://localhost:7040",
+    "AuditAPI": "https://localhost:7051",
+    "TransactionsAPI": "https://localhost:7237"
+  }
 }
+
