--- a/BankServices/appsettings.json
+++ b/BankServices/appsettings.json
@@ -10,7 +10,7 @@
     "AccountAPI": "https://localhost:7022",
     "AccountHolderAPI": "https://localhost:7040",
     "AuditAPI": "https://localhost:7051",
-    "TransactionsAPI": "https://localhost:7237"
+    "TransactionAPI": "https://localhost:7237"
   }
 }
 
