--- a/Bank.Service.Auth/appsettings.json
+++ b/Bank.Service.Auth/appsettings.json
@@ -11,7 +11,7 @@
   },
   "ApiSettings": {
     "JwtOptions": {
-      "Secret": "SECRET KEY",
+      "Secret": "SECRET KEY: MY NAME IS AMAZE AND I AM A .NET DEVELOPER",
       "Issuer": "bank-auth-api",
       "Audience": "bank-client"
     }
