--- a/BankServices/appsettings.json
+++ b/BankServices/appsettings.json
@@ -8,9 +8,9 @@
   "AllowedHosts": "*",
   "ServiceUrls": {
     "AccountAPI": "https://localhost:7022",
-    "AccountHolderAPI": "https://localhost:7040",
     "AuditAPI": "https://localhost:7051",
-    "TransactionAPI": "https://localhost:7237"
+    "TransactionAPI": "https://localhost:7237",
+    "AuthAPIBase": "https://localhost:7067"
   }
 }
 
